--- a/lamp_haproxy/aws/roles/common/tasks/main.yml
+++ b/lamp_haproxy/aws/roles/common/tasks/main.yml
@@ -2,7 +2,7 @@
 # This role contains common plays that will run on all nodes.
 
 - name: Install python bindings for SE Linux
-  yum:
+  apt:
     name: "{{ item }}"
     state: present
   with_items:
@@ -12,7 +12,7 @@
 - name: Create the repository for EPEL
   copy:
     src: epel.repo
-    dest: /etc/yum.repos.d/epel.repo
+    dest: /etc/apt.repos.d/epel.repo
 
 - name: Create the GPG key for EPEL
   copy:
@@ -20,7 +20,7 @@
     dest: /etc/pki/rpm-gpg
 
 - name: install some useful nagios plugins
-  yum:
+  apt:
     name: "{{ item }}"
     state: present
   with_items:
@@ -32,7 +32,7 @@
    - nagios-plugins-disk
 
 - name: Install ntp
-  yum:
+  apt:
     name: ntp
     state: present
   tags: ntp
