--- a/lamp_haproxy/aws/roles/haproxy/tasks/main.yml
+++ b/lamp_haproxy/aws/roles/haproxy/tasks/main.yml
@@ -2,7 +2,7 @@
 # This role installs HAProxy and configures it.
 
 - name: Download and install haproxy
-  yum:
+  apt:
     name: haproxy
     state: present
 
