--- a/lamp_haproxy/roles/common/tasks/main.yml
+++ b/lamp_haproxy/roles/common/tasks/main.yml
@@ -2,19 +2,19 @@
 # This role contains common plays that will run on all nodes.
 
 - name: Install python bindings for SE Linux
-  yum: name={{ item }} state=present
+  apt: name={{ item }} state=present
   with_items:
    - libselinux-python
    - libsemanage-python
 
 - name: Create the repository for EPEL
-  copy: src=epel.repo dest=/etc/yum.repos.d/epel.repo
+  copy: src=epel.repo dest=/etc/apt.repos.d/epel.repo
 
 - name: Create the GPG key for EPEL
   copy: src=RPM-GPG-KEY-EPEL-6 dest=/etc/pki/rpm-gpg
 
 - name: install some useful nagios plugins
-  yum: name={{ item }} state=present
+  apt: name={{ item }} state=present
   with_items:
    - nagios-nrpe
    - nagios-plugins-swap
@@ -24,7 +24,7 @@
    - nagios-plugins-disk
 
 - name: Install ntp
-  yum: name=ntp state=present
+  apt: name=ntp state=present
   tags: ntp
 
 - name: Configure ntp file
