--- a/lamp_haproxy/roles/db/tasks/main.yml
+++ b/lamp_haproxy/roles/db/tasks/main.yml
@@ -2,7 +2,7 @@
 # This role will install MySQL and create db user and give permissions.
 
 - name: Install Mysql package
-  yum: name={{ item }} state=present
+  apt: name={{ item }} state=present
   with_items:
    - mysql-server
    - MySQL-python
