--- a/lamp_haproxy/roles/nagios/tasks/main.yml
+++ b/lamp_haproxy/roles/nagios/tasks/main.yml
@@ -2,7 +2,7 @@
 # This will install nagios
 
 - name: install nagios
-  yum: pkg={{ item }} state=present
+  apt: pkg={{ item }} state=present
   with_items:
    - nagios
    - nagios-plugins
