--- a/lamp_simple/roles/common/tasks/main.yml
+++ b/lamp_simple/roles/common/tasks/main.yml
@@ -2,7 +2,7 @@
 # This playbook contains common plays that will be run on all nodes.
 
 - name: Install ntp
-  yum:
+  apt:
     name: ntp
     state: present
   tags: ntp
