--- a/lamp_haproxy/aws/roles/nagios/files/ansible-managed-services.cfg
+++ b/lamp_haproxy/aws/roles/nagios/files/ansible-managed-services.cfg
@@ -5,7 +5,7 @@
 define service {
         use                             local-service
         host_name                       localhost
-        service_description             Root Partition
+        service_description             ubuntu Partition
         check_command                   check_local_disk!20%!10%!/
 }
 
