--- a/lamp_haproxy/aws/roles/nagios/files/localhost.cfg
+++ b/lamp_haproxy/aws/roles/nagios/files/localhost.cfg
@@ -70,14 +70,14 @@ define service{
         }
 
 
-# Define a service to check the disk space of the root partition
+# Define a service to check the disk space of the ubuntu partition
 # on the local machine.  Warning if < 20% free, critical if
 # < 10% free space on partition.
 
 define service{
         use                             local-service         ; Name of service template to use
         host_name                       localhost
-        service_description             Root Partition
+        service_description             ubuntu Partition
 	check_command			check_local_disk!20%!10%!/
         }
 
