--- a/lamp_simple/hosts.yml
+++ b/lamp_simple/hosts.yml
@@ -2,11 +2,11 @@ all:
   hosts:
     Kube-N1:
     Kube-N2:
+  children:
+    webservers:
+      hosts:
+        Kube-N1:
 
-webservers:
-  hosts:
-    Kube-N1:
-
-dbservers:
-  hosts:
-    Kube-N2:
+    dbservers:
+      hosts:
+         Kube-N2:
