--- a/Nginx.yml
+++ b/Nginx.yml
@@ -2,16 +2,16 @@
   - name: Install nginx
     hosts: all
     tasks:
-      - name: Install nginx..
-        become: yes
-        apt: 
-          update_cache: yes  
-          name: nginx,mysql-server
+#      - name: Install nginx..
+#        become: yes
+#        apt: 
+#          update_cache: yes  
+#          name: nginx,mysql-server
 
-      - name: nginx started
-        service:
-            name: nginx
-            state: started
+#      - name: nginx started
+#        service:
+#            name: nginx
+#            state: started 
       - name: nginx stopped
         systemd:
             name: nginx
