--- a/Nginx.yml
+++ b/Nginx.yml
@@ -9,14 +9,14 @@
 #          update_cache: yes  
 #          name: nginx,mysql-server
 
-#      - name: nginx started
-#        service:
-#            name: nginx
-#            state: started 
-      - name: nginx stopped
-        systemd:
-          name: nginx
-          state: stopped
+      - name: nginx started
+        service:
+            name: nginx
+            state: started 
+#      - name: nginx stopped
+#        systemd:
+#          name: nginx
+#          state: stopped
               #    handlers:
               #        - name: Restart nginx
               # ansible.builtin.service:
