--- a/ssl_copy.yml
+++ b/ssl_copy.yml
@@ -10,7 +10,7 @@
         state: touch
       - name: Copy nginx configuration
         ansible.builtin.copy:
-          src: ./test.conf
+          src: test.conf
           dest: /etc/nginx/test.conf
         # The task is always reported as changed
         changed_when: True
